# brandvoice-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: claude_desktop_config.json
examples/sample_content/: blog_post.md  linkedin_post.txt  technical_doc.md
src/brandvoice_mcp/: __init__.py  __main__.py  config.py  llm_json.py  models.py  server.py
src/brandvoice_mcp/analysis/: prompt_builder.py  style_analyzer.py
src/brandvoice_mcp/prompts/: __init__.py  alignment_check.md  corpus_aggregate.md  style_analysis.md  voice_injection.md
src/brandvoice_mcp/storage/: chromadb.py  embeddings.py  profile_json.py
src/brandvoice_mcp/tools/: alignment.py  delete_samples.py  guidelines.py  ingest.py  profile.py  samples.py  voice_context.py
tests/: conftest.py  test_alignment.py  test_delete_samples.py  test_guidelines.py  test_ingest.py  test_integration.py  test_llm_json.py  test_storage.py  test_style_analyzer.py  test_voice_context.py
