[project]
name = "brandvoice-mcp"
version = "0.1.3"
description = "An MCP server that learns your writing style and makes every AI client sound like you"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Jinsung Park", email = "js.lia.park@gmail.com" }]
keywords = ["mcp", "brand-voice", "ai", "writing", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
brandvoice-mcp = "brandvoice_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Hatchling ships all files under this package directory, including
# brandvoice_mcp/prompts/*.md (required at runtime via Path(__file__).parent).
packages = ["src/brandvoice_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
